[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://IMG_4367.JPG" type="Texture" id=2]
[ext_resource path="res://informacion.jpg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 0.888
anchor_bottom = 1.008
margin_right = -0.312073
margin_bottom = 0.200012
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 602.0

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 26.0
text = "Calculadora de CO2"
percent_visible = -0.0625

[node name="LineEditDato" type="LineEdit" parent="."]
margin_left = 274.0
margin_top = 32.0
margin_right = 332.0
margin_bottom = 56.0

[node name="Label2" type="Label" parent="."]
margin_left = 14.0
margin_top = 37.0
margin_right = 271.0
margin_bottom = 51.0
text = "Ingresa la cantidad de datos en número:"

[node name="Label3" type="Label" parent="."]
margin_left = 94.0
margin_top = 67.0
margin_right = 269.0
margin_bottom = 81.0
text = "Ingresa si son Mb, Kb o Gb:"

[node name="LineEditUnidad" type="LineEdit" parent="."]
margin_left = 275.0
margin_top = 62.0
margin_right = 333.0
margin_bottom = 86.0

[node name="ButtonCalcular" type="Button" parent="."]
margin_left = 158.0
margin_top = 98.0
margin_right = 220.0
margin_bottom = 118.0
text = "Calcular"

[node name="TextEditResultado" type="TextEdit" parent="."]
margin_left = 41.0
margin_top = 133.0
margin_right = 474.0
margin_bottom = 246.0

[node name="Label4" type="Label" parent="."]
margin_left = 367.0
margin_top = 10.0
margin_right = 744.0
margin_bottom = 126.0
text = "¿Sabes que cantidad de CO2 generas al consumir datos 
en redes sociales, videojuegos, videos, información,
comunicaciones, etc?

La Calculadora de Co2 te ayuda a tener un aproximado, 
fue creada con el fin de reflexionar sobre nuestro consumo
a veces desmedido de internet. "

[node name="Img4367" type="Sprite" parent="."]
position = Vector2( 905, 457 )
scale = Vector2( 0.462329, 0.444223 )
texture = ExtResource( 2 )

[node name="Label5" type="Label" parent="."]
margin_left = 803.0
margin_top = 521.0
margin_right = 1014.0
margin_bottom = 586.0
text = "        Israel G. Bistrain 2024

¡Sígueme en Mastodon!
@supersnufkin@mastodon.social"

[node name="Informacion" type="Sprite" parent="."]
position = Vector2( 386.75, 420 )
scale = Vector2( 0.531641, 0.472222 )
texture = ExtResource( 3 )

[node name="Label6" type="Label" parent="."]
margin_left = 936.0
margin_top = 14.0
margin_right = 1008.0
margin_bottom = 28.0
text = "Versión 1.0"

[node name="Label7" type="Label" parent="."]
margin_left = 800.0
margin_top = 159.0
margin_right = 999.0
margin_bottom = 309.0
text = "\"To see the world, things 
dangerous to come to, to 
see behind walls, to draw
closer, to find each other, 
and to feel.
That is the purpose of Life\"

                   -The  secret life 
				                    of Walter Mitty"
